# rowvoi

./: .gitignore  CITATION.cff  Makefile  README.md  benchmark_setcover.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml  python-publish.yml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: README.md  known_data_setcover_demo.py  predictive_selection_demo.py  probabilistic_demo.py
examples/advanced_algorithms/: known_data_setcover_demo.py  probabilistic_demo.py
examples/business_use_cases/: survey_optimization.py
examples/data/: customers_sample.csv
examples/getting_started/: basic_customer_deduplication.ipynb  basic_customer_deduplication.py
rowvoi/: __init__.py  core.py  eval.py  keys.py  logical.py  mi.py  ml.py  policies.py  prob_keys.py  probcover.py  session.py  setcover.py  simulate.py  types.py
tests/: __init__.py  conftest.py  test_logical.py  test_mi.py  test_ml.py  test_new_api.py  test_prob_keys.py  test_probcover.py  test_setcover.py  test_simulate.py  test_types.py
