[build-system]
requires = ["uv_build>=0.9.11"]
build-backend = "uv_build"

[project]
name = "rowvoi"
version = "0.2.0"
description = "Interactive disambiguation of rows in a dataset using value-of-information policies"
readme = "README.md"
authors = [
    { name = "Gaurav Sood", email = "contact@gsood.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.7.2",
]
keywords = [
    "data-disambiguation",
    "value-of-information",
    "feature-selection",
    "interactive-ml",
    "data-cleaning",
    "entity-resolution",
    "mutual-information",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/gojiplus/rowvoi"
Repository = "https://github.com/gojiplus/rowvoi"
Issues = "https://github.com/gojiplus/rowvoi/issues"
Documentation = "https://gojiplus.github.io/rowvoi/"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
]
docs = [
    "sphinx>=7.0.0",
    "furo>=2024.1.29",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-copybutton>=0.5.2",
]
optimization = [
    "pulp>=2.7.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["*.ipynb"]  # Exclude Jupyter notebooks from formatting/linting

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "D",     # pydocstyle
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in `__init__`
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D102", "D103"]
"**/*.ipynb" = ["E501"]  # Ignore line length in Jupyter notebooks



[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=rowvoi",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["rowvoi"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.uv.build-backend]
module-name = "rowvoi"
module-root = ""
